noticed a bug on mobile after i added 'selectors-use the button selectors' above the dark mode button, needed to add a css rule to turn the txt colour white on dark mode activation

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -415,7 +415,7 @@ background-color: #fafafa;
 .wrapper img {
     max-height: 150px;
 max-width: 250px;
-padding: 10px;
+padding: 10px; 
 }
 
 
@@ -447,3 +447,6 @@ padding: 10px;
     background-color: green;
 }
 
+ .darkmode .dm-txt-white { 
+    color: white;
+}
